--- a/my_sbc.cfg
+++ b/my_sbc.cfg
@@ -1,14 +1,19 @@
 MEMORY {
-    ZP: start = $0000, size = $0100;
     RAM: start = $0000, size = $8000, fill = yes;
+    ZP: start = $0000, size = $0100, define = yes;
+    STACK: start = $0100, size = $0100, define = yes;
+    HEAP: start = $0200, size = $8DFF;
+
     ROM: file = %O, start = $8000, size = $7FFC, fill = yes;
     VECTORS: file = %O, start = $FFFC, size = $4, fill = yes;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
+    #STACK:    load = STACK, type = rw;
+    #HEAP:     load = HEAP, type = rw;
     CODE:     load = ROM, type = ro;
     RODATA:   load = ROM, type = ro;
-    VECTORS:   load = VECTORS, type = ro;
+    VECTORS:  load = VECTORS, type = ro;
 }
 FILES {
     %O: format = bin;
