testing io read

--- a/my_sbc.cfg
+++ b/my_sbc.cfg
@@ -4,8 +4,9 @@ MEMORY {
     STACK: start = $0100, size = $0100, define = yes;
     HEAP: start = $0200, size = $8DFF;
 
-    ROM: file = %O, start = $8000, size = $7FFC, fill = yes;
-    VECTORS: file = %O, start = $FFFC, size = $4, fill = yes;
+    ROM: file = %O, start = $8000, size = $8000, fill = yes;
+    #IO: start = $e000, size = $F, define = yes;
+    # VECTORS: file = %O, start = $FFFC, size = $4, fill = yes;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
@@ -13,7 +14,9 @@ SEGMENTS {
     #HEAP:     load = HEAP, type = rw;
     CODE:     load = ROM, type = ro;
     RODATA:   load = ROM, type = ro;
-    VECTORS:  load = VECTORS, type = ro;
+    # VECTORS:  load = VECTORS, type = ro;
+    IO: load = ROM, start = $e000, type = overwrite;
+    VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
 FILES {
     %O: format = bin;
