--- a/mimonify/Cargo.toml
+++ b/mimonify/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 byteorder = "1.5.0"
 serial = "0.4.0"
 # serial2 = "0.2"
