--- a/my_sbc_ram.cfg
+++ b/my_sbc_ram.cfg
@@ -1,5 +1,5 @@
 MEMORY {
-    RAM: start = $0000, size = $8000, fill = yes, define = yes;
+    RAM: start = $0000, size = $fe00, fill = yes, define = yes;
     ZP: start = $0000, size = $0100, define = yes;
     STACK: start = $0100, size = $0100, define = yes;
     HEAP: start = $0200, size = $8DFF;
