WIP: big cleanup

--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -10,10 +10,10 @@ MEMORY {
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
-    CODE:     load = RAM, start = $4000, type = ro;
+    CODE:     load = RAM, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
 FILES {
-    %O: format = bin;
+    %O: format = o65;
 }
