--- a/my_sbc_ram_d000.cfg
+++ b/my_sbc_ram_d000.cfg
@@ -1,21 +1,18 @@
 MEMORY {
-    RAM: start = $0000, size = $FE00, fill = yes, define = yes;
+    RAM: start = $0000, size = $fe00, fill = yes, define = yes;
     ZP: start = $0000, size = $0100, define = yes;
     STACK: start = $0100, size = $0100, define = yes;
+    HEAP: start = $0200, size = $FDFF;
 
-    ROM: file = %O, start = $FF00, size = $0100, fill = yes;
-    #IO: start = $e000, size = $F, define = yes;
+    ROM: file = %O, start = $ff00, size = $100, fill = yes, define = yes;
+    IO: start = $fe00, size = $100, define = yes;
     # VECTORS: file = %O, start = $FFFC, size = $4, fill = yes;
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
-    #STACK:    load = STACK, type = rw;
-    #HEAP:     load = HEAP, type = rw;
-    CODE:     load = RAM, start = $d000 type = ro;
+    CODE:     load = RAM, start = $d000, type = ro;
     RODATA:   load = RAM, type = ro;
-    # VECTORS:  load = VECTORS, type = ro;
-    # IO: load = RAM, start = $fe00, type = overwrite;
-    VECTORS: load = ROM, start = $fffc, type = overwrite;
+    # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
 FILES {
     %O: format = bin;
