move dos to top of ram area

--- a/my_sbc_ram_basic.cfg
+++ b/my_sbc_ram_basic.cfg
@@ -10,7 +10,7 @@ MEMORY {
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
-    CODE:     load = RAM, start = $3000, type = ro;
+    CODE:     load = RAM, start = $c000, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
