--- a/my_sbc_dos.cfg
+++ b/my_sbc_dos.cfg
@@ -1,5 +1,5 @@
 MEMORY {
-    RAM: start = $0000, size = $f000, fill = yes, define = yes;
+    RAM: start = $0000, size = $fe00, fill = yes, define = yes;
     ZP: start = $0000, size = $0100, define = yes;
     STACK: start = $0100, size = $0100, define = yes;
     HEAP: start = $0200, size = $FDFF;
@@ -10,7 +10,7 @@ MEMORY {
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
-    CODE:     load = RAM, start = $3000, type = ro;
+    CODE:     load = RAM, start = $f000, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
