WIP: import symbol

--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -14,6 +14,15 @@ SEGMENTS {
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
+# SYMBOLS {
+#     os_alloc: type = import;
+# }
+FORMATS {
+    o65: os = lunix, version = 0, type = small,
+        import = os_alloc;
+}
+
 FILES {
     %O: format = o65;
+
 }
