support bss segment, mostly rewrite reloc, bss sieve seems to work

--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -12,6 +12,7 @@ SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
     CODE:     load = RAM, type = ro;
     RODATA:   load = RAM, type = ro;
+    BSS:    load = RAM, type = bss, define = yes, align = $100;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
 # SYMBOLS {
