--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -20,7 +20,7 @@ SEGMENTS {
 # }
 FORMATS {
     o65: os = lunix, version = 0, type = small,
-        import = os_alloc;
+        import = os_alloc, import = os_getc, import = os_putc, import = os_fopen, import = os_fgetc, import = os_print_dec, import = os_putnl, import = os_print_string;
 }
 
 FILES {
