'dos 3.x' release cycle: improve os interface & get rid of builtin rodents

--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -20,7 +20,16 @@ SEGMENTS {
 # }
 FORMATS {
     o65: os = lunix, version = 0, type = small,
-        import = os_alloc, import = os_getc, import = os_putc, import = os_fopen, import = os_fgetc, import = os_print_dec, import = os_putnl, import = os_print_string;
+        import = os_alloc,
+        import = os_getc,
+        import = os_putc, 
+        import = os_fopen, 
+        import = os_fgetc, 
+        import = os_print_dec, 
+        import = os_putnl, 
+        import = os_print_string,
+        import = os_get_argn,
+        import = os_get_arg;
 }
 
 FILES {
