WIP: 'event driven' os mainloop

--- a/my_sbc_rel.cfg
+++ b/my_sbc_rel.cfg
@@ -29,7 +29,9 @@ FORMATS {
         import = os_putnl, 
         import = os_print_string,
         import = os_get_argn,
-        import = os_get_arg;
+        import = os_get_arg,
+        import = os_get_event,
+        import = os_event_return;
 }
 
 FILES {
