add explicit ordering for os calls

--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -1,27 +1,39 @@
 [os_calls.os_alloc]
 implementation = "alloc_page_span"
+ordinal = 0
 [os_calls.os_getc]
 implementation = "getc_blocking"
+ordinal = 1
 [os_calls.os_putc]
 implementation = "putc"
+ordinal = 2
 [os_calls.os_fopen]
 implementation = "file_open_raw"
+ordinal = 3
 [os_calls.os_fgetc]
 implementation = "fgetc_buf"
+ordinal = 4
 [os_calls.os_print_dec]
 implementation = "print_dec"
+ordinal = 5
 [os_calls.os_putnl]
 implementation = "put_newline"
+ordinal = 6
 [os_calls.os_print_string]
 implementation = "print_message"
+ordinal = 7
 [os_calls.os_get_argn]
 implementation = "get_argn"
+ordinal = 8
 [os_calls.os_get_arg]
 implementation = "get_arg"
+ordinal = 9
 [os_calls.os_get_event]
 implementation = "get_event"
+ordinal = 10
 [os_calls.os_event_return]
 implementation = "event_return"
+ordinal = 11
 
 
 
