--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -31,7 +31,8 @@ FORMATS {
         import = os_get_argn,
         import = os_get_arg,
         import = os_get_event,
-        import = os_event_return;
+        import = os_event_return,
+        import = os_free;
 }
 
 FILES {
