WIP: debug file io problems with timer interrupts

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -32,7 +32,8 @@ FORMATS {
         import = os_get_arg,
         import = os_get_event,
         import = os_event_return,
-        import = os_free;
+        import = os_free,
+        import = os_print_fstat;
 }
 
 FILES {
