--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -58,6 +58,10 @@ implementation = "free_page_span"
 ordinal = 12
 calling = ["a in: start page"]
 description = "free contiguous span of pages"
+[os_calls.os_print_fstat]
+implementation = "print_fletch16"
+ordinal = 13
+description = "print stats of current file io"
 
 
 
