add pseudo rng & use it in snake (WIP: there is no seed...)

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -33,7 +33,8 @@ FORMATS {
         import = os_get_event,
         import = os_event_return,
         import = os_free,
-        import = os_print_fstat;
+        import = os_print_fstat,
+        import = os_rand;
 }
 
 FILES {
