--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -62,6 +62,11 @@ description = "free contiguous span of pages"
 implementation = "print_fletch16"
 ordinal = 13
 description = "print stats of current file io"
+[os_calls.os_rand]
+implementation = "rand_8"
+ordinal = 14
+description = "return pseudo random number"
+calling = ["a out: random number"]
 
 
 
