what a fscking idiot...
use sbc for the first time in your life in the most complicated bit
fiddling mess imaginable. Earn stupid price
other than that it would have worked first try (except one obvious #...)

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -11,7 +11,7 @@ MEMORY {
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
     CODE:     load = RAM, type = ro;
-    RODATA:   load = RAM, type = ro;
+    RODATA:   load = RAM, type = ro; #, align = $100;
     BSS:    load = RAM, type = bss, define = yes, align = $100;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
