WIP: put pcm output into 'direct timer'

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -11,7 +11,7 @@ MEMORY {
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
     CODE:     load = RAM, type = ro;
-    RODATA:   load = RAM, type = ro; #, align = $100;
+    RODATA:   load = RAM, type = ro;
     BSS:    load = RAM, type = bss, define = yes, align = $100;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
@@ -34,7 +34,8 @@ FORMATS {
         import = os_event_return,
         import = os_free,
         import = os_print_fstat,
-        import = os_rand;
+        import = os_rand,
+        import = os_set_direct_timer;
 }
 
 FILES {
