--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -67,6 +67,11 @@ implementation = "rand_8"
 ordinal = 14
 description = "return pseudo random number"
 calling = ["a out: random number"]
+[os_calls.os_set_direct_timer]
+implementation = "set_direct_timer"
+ordinal = 15
+description = "set vector pointer for direct timer (called from irq handler on timer interrupt)"
+calling = ["a in: addr low", "x in: addr high"]
 
 
 
