direct timer seems to work transparently

--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -70,8 +70,8 @@ calling = ["a out: random number"]
 [os_calls.os_set_direct_timer]
 implementation = "set_direct_timer"
 ordinal = 15
-description = "set vector pointer for direct timer (called from irq handler on timer interrupt)"
-calling = ["a in: addr low", "x in: addr high"]
+description = "set vector pointer and (and os timer DIV/16) for direct timer (called from irq handler on timer interrupt)"
+calling = ["a in: addr low", "x in: addr high", "y in: DIV/16 for os timer events"]
 
 
 
