WIP: testing for mark3 architecture

--- a/my_sbc_dos.cfg
+++ b/my_sbc_dos.cfg
@@ -10,7 +10,7 @@ MEMORY {
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
-    CODE:     load = RAM, start = $f000, type = ro;
+    CODE:     load = RAM, start = $e000, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
