testing dual-dac config for drawing on the oscilloscope...

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -9,7 +9,9 @@ MEMORY {
     # VECTORS: file = %O, start = $FFFC, size = $4, fill = yes;
 }
 SEGMENTS {
-    ZEROPAGE: load = ZP,       type = zp;
+    # ZEROPAGE_SYS: load = ZP,       type = zp;
+    ZEROPAGE: load = ZP, start = $0080, type = zp;
+    
     CODE:     load = RAM, type = ro;
     RODATA:   load = RAM, type = ro;
     BSS:    load = RAM, type = bss, define = yes, align = $100;
