--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -37,7 +37,8 @@ FORMATS {
         import = os_free,
         import = os_print_fstat,
         import = os_rand,
-        import = os_set_direct_timer;
+        import = os_set_direct_timer,
+        import = os_dbg_byte;
 }
 
 FILES {
