--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -72,7 +72,11 @@ implementation = "set_direct_timer"
 ordinal = 15
 description = "set vector pointer and (and os timer DIV/16) for direct timer (called from irq handler on timer interrupt)"
 calling = ["a in: addr low", "x in: addr high", "y in: DIV/16 for os timer events"]
-
+[os_calls.os_dbg_byte]
+implementation = "dbg_byte"
+ordinal = 16
+description = "debug print byte value."
+calling = ["ARG0(zp) in: the byte to print as decimal value"]
 
 
 
