change os_fopen to block id

--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -14,7 +14,7 @@ ordinal = 2
 description = "put character to standard output (uart 0)"
 calling = ["a in: output char"]
 [os_calls.os_fopen]
-implementation = "file_open_raw"
+implementation = "file_open_block"
 ordinal = 3
 description = "open file in raw buffered mode on fileio channel (uart 1)"
 [os_calls.os_fgetc]
