introduce vfs IO abstraction layer

--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -14,11 +14,11 @@ ordinal = 2
 description = "put character to standard output (uart 0)"
 calling = ["a in: output char"]
 [os_calls.os_fopen]
-implementation = "file_open_block"
+implementation = "vfs_open"
 ordinal = 3
 description = "open file in raw buffered mode on fileio channel (uart 1)"
 [os_calls.os_fgetc]
-implementation = "fgetc_buf"
+implementation = "vfs_getc"
 ordinal = 4
 description = "read single character from open buffered file"
 calling = ["a out: input char"]
