rudimentary read from ide 'raw device' via OS IO interface works

--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -17,6 +17,7 @@ calling = ["a in: output char"]
 implementation = "vfs_open"
 ordinal = 3
 description = "open file in raw buffered mode on fileio channel (uart 1)"
+calling = ["a in: filename addr low", "x in: filename addr high"]
 [os_calls.os_fgetc]
 implementation = "vfs_getc"
 ordinal = 4
