--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -38,7 +38,9 @@ FORMATS {
         import = os_print_fstat,
         import = os_rand,
         import = os_set_direct_timer,
-        import = os_dbg_byte;
+        import = os_dbg_byte,
+        import = os_fnext_block,
+        import = os_ide_write_block;
 }
 
 FILES {
