--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -78,6 +78,16 @@ implementation = "dbg_byte"
 ordinal = 16
 description = "debug print byte value."
 calling = ["ARG0(zp) in: the byte to print as decimal value"]
+[os_calls.os_fnext_block]
+implementation = "vfs_next_block"
+ordinal = 17
+description = "read next block of open file into iobuf"
+calling = ["carry clear on eof"]
+[os_calls.os_ide_write_block]
+implementation = "vfs_ide_write_block"
+ordinal = 18
+description = "directly write iobuf to ide disk at LBA"
+calling = ["a in: LBA low", "x in: LBA mid", "y in: LBA high"]
 
 
 
