--- a/osgen/my_sbc.ini
+++ b/osgen/my_sbc.ini
@@ -87,6 +87,11 @@ calling = ["carry clear on eof"]
 implementation = "vfs_ide_write_block"
 ordinal = 18
 description = "directly write iobuf to ide disk at LBA"
+calling = ["uses internal LBA, set via os_ide_set_lba", "carry set on error"]
+[os_calls.os_ide_set_lba]
+implementation = "vfs_ide_set_lba"
+ordinal = 19
+description = "set LBA for next ide operation"
 calling = ["a in: LBA low", "x in: LBA mid", "y in: LBA high"]
 
 
