add set_lba function

--- a/my_sbc_os.cfg
+++ b/my_sbc_os.cfg
@@ -40,7 +40,8 @@ FORMATS {
         import = os_set_direct_timer,
         import = os_dbg_byte,
         import = os_fnext_block,
-        import = os_ide_write_block;
+        import = os_ide_write_block,
+        import = os_ide_set_lba;
 }
 
 FILES {
