WIP: restructure os state / zp: use proper symbols

--- a/my_sbc_dos.cfg
+++ b/my_sbc_dos.cfg
@@ -10,6 +10,8 @@ MEMORY {
 }
 SEGMENTS {
     ZEROPAGE: load = ZP,       type = zp;
+    PAGETABLE: load = RAM, start = $0200, type = bss;
+    OS_STATE: load = RAM, start = $0300, type = bss;
     CODE:     load = RAM, start = $e000, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
