WIP: put start / irq vecotrs into dos binary (VECTOR segment)

--- a/my_sbc_dos.cfg
+++ b/my_sbc_dos.cfg
@@ -13,6 +13,7 @@ SEGMENTS {
     PAGETABLE: load = RAM, start = $0200, type = bss;
     OS_STATE: load = RAM, start = $0300, type = bss;
     CODE:     load = RAM, start = $e000, type = ro;
+    VECTORS:  load = RAM, start = $fdfc, type = ro;
     RODATA:   load = RAM, type = ro;
     # VECTORS: load = ROM, start = $fffc, type = overwrite;
 }
